Structure should have a method for concurrently getting all of the property map entries, and this method shouldn't involve copy-paste https://bugs.webkit.org/show_bug.cgi?id=136983

Reviewed by Mark Hahnenberg.

* runtime/PropertyMapHashTable.h:
(JSC::PropertyMapEntry::PropertyMapEntry): Moved PropertyMapEntry struct to Structure.h so that Structure can refer to it.
* runtime/Structure.cpp:
(JSC::Structure::getConcurrently): Switch to using the new forEachPropertyConcurrently() method.
(JSC::Structure::getPropertiesConcurrently): The subject of this patch. It will be useful for object allocation sinking (bug 136330).
(JSC::Structure::dump): Switch to using the new forEachPropertyConcurrently() method.
* runtime/Structure.h:
(JSC::PropertyMapEntry::PropertyMapEntry): Moved from PropertyMapHashTable.h.
* runtime/StructureInlines.h:
(JSC::Structure::forEachPropertyConcurrently): Capture this very common concurrent structure iteration pattern into a template method.



Canonical link: https://commits.webkit.org/154795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173799 268f45cc-cd09-0410-ab3c-d52691b4dbfc